# biomancy

./: .flake8  README.md  pyproject.toml
.github/workflows/: CI.yml
src/biomancy/: __init__.py  genomic_dataset.py  typing.py
src/biomancy/data/: __init__.py  derive.py  partition.py  stratified_sampler.py  typing.py
src/biomancy/data/sources/: __init__.py  bed.py  bigwig.py  concatenate.py  data_source.py
src/biomancy/data/sources/fasta/: __init__.py  fasta.py  ohe.py  tokenizer.py
src/biomancy/models/: __init__.py  dnabert.py  transformers.py
src/biomancy/serve/: __init__.py  serve.py  typing.py
src/biomancy/serve/io/: __init__.py  bed.py  bigwig.py  hook.py  iotools.py
src/biomancy/serve/strategy/: __init__.py  merge_and_bin.py  partitions.py  strategy.py
src/biomancy/transform/: __init__.py  base.py  chain.py  typing.py
src/biomancy/transform/intervals/: __init__.py  base.py  inject_limits.py  randomize_strand.py  shift.py
tests/: test_derive.py  test_stratified_sampler.py
tests/serve/: test_io.py  test_strategy.py
tests/sources/: common.py  test_bed.py  test_bigwig.py  test_concat.py  test_fasta.py
tests/test_data/: __init__.py  example.bed  example.bw  example.fa  vocab.txt
tests/transform/: test_intervals.py
